--- a/AgendaDeContatosMVC/appsettings.json
+++ b/AgendaDeContatosMVC/appsettings.json
@@ -9,7 +9,7 @@
 
   "ConnectionStrings": {
 
-    "DefaultConnection" : "Server=Localhost, 1433;DataBase=AgendaDeContatos;Password=********;User Id=sa;Trusted_Connection=false;Encrypt=false"
+    "DefaultConnection" : "Server=Localhost, 1433;DataBase=AgendaDeContatos;Password=*****;User Id=sa;Trusted_Connection=false;Encrypt=false"
   },
 
   "Endpoints" : {
